alignment fix

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 #assignements {
-    text-align: cetner;
+    text-align: center;
     border-radius: 10px;
     margin: auto;
 }
